# cpp-rl

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: day_1.cpp  day_2.cpp  day_3.cpp  day_4.cpp  day_5.cpp  test_libtorch.cpp
src/headers/: dataset.h  mlp.h  stdtraintest.h  train_config.h
